[package]
name = "draw_box"
version = "0.2.0"
edition = "2021"
authors = ["Sven Ponelat"]
license = "MIT"
description = "Names for box drawing elements."
repository = "https://github.com/svencp/draw_box"
keywords = ["drawing","box"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
